--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "homepage": "https://pavoninushka.github.io/drum-machine",
-  "name": "drum_machine",
+  "name": "drum-machine",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "bootstrap": "^4.6.0",
-    "font-awesome": "^4.7.0"
+    "bootstrap": "^4.6.0"
   },
   "scripts": {
     "start": "react-scripts start",
